fix: complete Nagram 12.10 source dependency sync